acess approved/denied

--- a/page3.html
+++ b/page3.html
@@ -69,8 +69,10 @@
             <img src="./assets/images/BTGFazTech-Squad24LOGO .png" alt="LAMP TECH" width="25%" height="25%">
           </div>
           <h1 id="lamptech">Lamp Tech</h1>
-          <img src="./assets/images/icons8-approved-64.png" width="40%"" height="40%"">
-          <p id="mensagem">Sua compra no mercado de energia foi aprovada!</p>
+          <img src="./assets/images/cross.png" width="40%"" height="40%"">
+          <br>
+          <br>
+          <p id="mensagem">Oops! Sua empresa ainda não tem capital de giro suficiente!</p>
           <br>
           <!--Formulario
           <div class="formulario">
