--- a/page2.html
+++ b/page2.html
@@ -102,7 +102,9 @@
               <br>
               <br>
               <br>
-              <button type="submit" class="btn btn-light"">Voltar para página inicial</button>
+              <a href="./index.html">
+                <button type="submit" class="btn btn-light"">Voltar para página inicial</button>
+              </a>
             </form>
           </div>
           <!--<a href="./project.html" class="btn btn-default btn-lg" title="">Discover</a>-->
