--- a/page3.html
+++ b/page3.html
@@ -104,8 +104,10 @@
               <br>
               <br>
               <br>
-              <button type="submit" class="btn btn-light"">Voltar para página inicial</button>
-            </form>
+              <a href="./index.html">
+                <button type="submit" class="btn btn-light"">Voltar para página inicial</button>
+              </a>
+              </form>
           </div>
           <!--<a href="./project.html" class="btn btn-default btn-lg" title="">Discover</a>-->
         </div>
